# Pomegranate-3

./: .gitmodules  CMakeLists.txt  README.md
Examples/: CMakeLists.txt
Examples/FrostedGlass/: CMakeLists.txt  Main.cpp
Examples/MessagingAppUI/: CMakeLists.txt  Main.cpp
Examples/UI/: CMakeLists.txt  Main.cpp
Examples/Window/: CMakeLists.txt  Main.cpp
Modules/Core/: App.cpp  BitFlag.cpp  BitFlag.h  CMakeLists.txt  Pointer.h  Pomegranate.cpp  Pomegranate.h  Reflective.cpp  Reflective.h  Signal.cpp  Signal.h
Modules/Events/: CMakeLists.txt  Event.cpp  Event.h
Modules/Framework/: App.cpp  App.h  CMakeLists.txt
Modules/Layout/: CMakeLists.txt  Container.cpp  Container.h  Fill.cpp  Fill.h  Flexable.cpp  Flexable.h  Horizontal.cpp  Horizontal.h  Vertical.cpp  Vertical.h
Modules/Nodes/: CMakeLists.txt  Node.h
Modules/Platform/: CMakeLists.txt  Window.cpp  Window.h
Modules/Platform/Common/: StandardWindow.cpp  StandardWindow.h
Modules/Platform/Linux/: LinuxWindow.cpp  LinuxWindow.h
Modules/Platform/MacOS/: Effects.hpp  Effects.mm  MacOsWindow.cpp  MacOsWindow.h
Modules/Platform/Windows/: WindowsWindow.cpp  WindowsWindow.h
Modules/Rendering/: Buffer.cpp  Buffer.h  CMakeLists.txt  Color.cpp  Color.h  CommandBuffer.cpp  CommandBuffer.h  CommandQueue.cpp  CommandQueue.h  CopyPass.cpp  CopyPass.h  Display.cpp  Display.h  DrawPass.cpp  DrawPass.h  Font.cpp  Font.h  Pipeline.cpp  Pipeline.h  RenderPass.cpp  RenderPass.h  Renderer.cpp  Renderer.h  Sampler.cpp  Sampler.h  Shader.cpp  Shader.h  Texture.cpp  Texture.h  TransferBuffer.cpp  TransferBuffer.h  Vertex.h  Viewport.h
Modules/UI/: CMakeLists.txt  Theme.cpp  Theme.h  UICompositor.cpp  UICompositor.h  UIElement.cpp  UIElement.h  UILayer.cpp  UILayer.h
Modules/UI/Elements/: BlurElement.cpp  BlurElement.h  BlurPanel.cpp  BlurPanel.h  ButtonElement.cpp  ButtonElement.h  Full.cpp  Full.h  FullLayoutElement.cpp  FullLayoutElement.h  HorizontalLayout.cpp  HorizontalLayout.h  HorizontalLayoutElement.cpp  HorizontalLayoutElement.h  ImageElement.cpp  ImageElement.h  InputElement.cpp  InputElement.h  Panel.cpp  Panel.h  PanelElement.cpp  PanelElement.h  Root.cpp  Root.h  RootElement.cpp  RootElement.h  Spacer.cpp  Spacer.h  SpacerElement.cpp  SpacerElement.h  TextElement.cpp  TextElement.h  VerticalLayout.cpp  VerticalLayout.h  VerticalLayoutElement.cpp  VerticalLayoutElement.h
Resources/: Compositor.hlsl  Glass.hlsl  Panel.hlsl
Resources/Shaders/: Glass.hlsl  Panel.hlsl  Texture.hlsl  Triangle.hlsl
